rest url property added

--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -9,3 +9,4 @@ spring:
 inputCsvFile: file:///home/senthil/app/category-graph-tool/src/main/resources/simpl.csv
 delimiter: "|"
 names: id, value
+rest_url: "http://localhost:8102/category"
